# wijklabels

./: .gitignore  README.md  justfile  pyproject.toml  tox.ini
dashboard/: dashboard.ipynb  dashboard_map.ipynb  render.sh  requirements.txt
dashboard/dashboard_server/: dashboard.py  requirements.txt  run_gunicorn.sh  wsgi.py
docker/: docker-compose.yaml
docs/: report.html  report.ipynb  report_nl.html  report_nl.ipynb
report/: .gitignore  _quarto.yml  references.bib  report.qmd  report_nl.qmd
report_rendered/: report.ipynb
report_rendered/report_files/libs/bootstrap/: bootstrap.min.css
src/wijklabels/: __init__.py  labels.py  load.py  main.py  process.py  report.py  validate.py  vormfactor.py  woningtype.py
src/wijklabels/sql/: collect_verblijfsobject.sql
src/wijklabels/sqlfiles/: classify_woningtype.sql  classify_woningtype_full.sql  classify_woningtype_full_all.sql  create_combined_input.sql  create_party_walls_table.sql  estimate_floors.sql  fix_3dbag_dak_type.sql  pand_in_buurt.sql  select_multi_pand_single_vbo.sql  select_pand_with_vbo.sql  select_pand_with_vbo_multi_view.sql  select_pand_with_vbo_view.sql  select_verblijfsobject.sql
tests/: conftest.py  test_labels.py  test_load.py  test_vormfactor.py  test_woningtype.py
tests/data/: README.md  vbo.csv
tests/data/input/: energielabel_spreiding_subset.xlsx  select_pand_for_buurt.sql  select_woningtypen_for_buurt.sql
tmp/: adjust_labels.py  analyse_ep_online.py  plot_aggregates.py  recalculate_energylabels.py  validate_woningtype.py
