[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wijklabels"
version = "2024.02.19"
description = "Estimate the energy label distributions per negihbourhood in the Netherlands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "3DGI", email = "info@3dgi.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "cjio==0.9.0",
    "pandas==2.1.1",
    "scipy==1.11.4",
    "matplotlib==3.8.1",
    "openpyxl==3.1.2",
    "psycopg==3.1.14",
    "psycopg-pool==3.2.0"
]
optional-dependencies = { develop = ["pytest", "tox", "jupyter", "jupyter-cache"], dashboard = ["geopandas==0.14.3", "folium==0.15.1", "plotly==5.18.0", "dash==2.15.0", "dash_leaflet==1.0.15"] }

[project.urls]
"Homepage" = "https://github.com/3DGI/wijklabels"
"Bug Tracker" = "https://github.com/3DGI/wijklabels/issues"

[project.scripts]
wijklabels-process = "wijklabels.process:process_cli"
wijklabels-validate = "wijklabels.validate:validate_cli"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
